ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    shared-gateway-access: "true"
