ingress/httproute-gcs-proxy-staging.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: images-staging
  namespace: api-staging
  labels:
    exposed: "true"
spec:
  parentRefs:
    - kind: Gateway
      namespace: ingress
      name: external-gateway
  hostnames:
    - "images-staging.mythica.ai"
    - "images-staging.mythica.gg"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mythica-public-images/
      backendRefs:
        - name: gcs-proxy
          port: 80
